--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=${PORT:8081}
-spring.mvc.hiddenmethod.filter.enabled=true
+server.servlet.context-path=/
+server.port=${PORT:8080}
 
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/socks}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:mma}
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
